fixed styling and spacing in desktop view

--- a/amcm-webpage/src/styles/Information.css
+++ b/amcm-webpage/src/styles/Information.css
@@ -310,9 +310,6 @@
     flex-wrap: wrap;
     width: 100%;
   }
-
-
-
   #information-achievements-content .card {
     width: 260px;
     height: auto;
@@ -419,8 +416,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 2em;
-    padding-top: 1em;
   }
 
   #information-wrapper-1 {
@@ -666,12 +661,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 2em;
-    padding-top: 1em;
+    gap: 4em;
+    
   }
 
   #information-wrapper-1 {
-    margin: 3em 0;
     width: inherit;
     height: 25vh;
     text-align: center;
@@ -715,8 +709,6 @@
 
   #information-wrapper-2 {
     width: inherit;
-    margin: 3em 0;
-    margin-bottom: 4em;
     text-align: center;
   }
 
@@ -801,12 +793,9 @@
   }
 
   #information-wrapper-4 {
-    padding: 2em;
     border-right: #ffa92d 3px solid;
-
     height: 50vh;
     width: inherit;
-    margin: 3em 0;
     text-align: center;
     display: flex;
     justify-content: center;
@@ -827,9 +816,7 @@
 
   #information-wrapper-5 {
     width: inherit;
-    margin: 3em 0;
     text-align: center;
-    margin-bottom: 4em;
     background-color: #007682;
     border-radius: 18px;
   }
@@ -848,7 +835,6 @@
     font-size: 20px;
   }
   .president-message {
-    padding: 2em;
     width: 85%;
     display: flex;
     flex-direction: row;
