--- a/amcm-webpage/src/styles/Services.css
+++ b/amcm-webpage/src/styles/Services.css
@@ -180,7 +180,6 @@
   }
 
   #services-card-wrapper .services-card .services-card-content {
-    margin: 2em 0;
     width: 30vw;
   }
 
